change to landing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Kaching</a></h1>
+					<h1><a href="#">Ka-Ching</a></h1>
 					<p>Just a simple app<br />
 					to sell your things!</p>
 					<ul class="actions">
@@ -33,7 +33,7 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>The fastest way to get things you didn't know you needed</h2>
+					<h2>The fastest way to get things you didn't know you needed!</h2>
 				</header>
 				<ul class="icons major">
 					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
@@ -56,14 +56,14 @@
 						<div class="image"><img src="images/kachingApp/submit.png" alt="" /></div>
 						<div class="content">
 							<h3>Post items to sell</h3>
-							<p>Users can post items to sell through their user profile going to steps of entering title, description, photos, and location they want to sell the item.</p>
+							<p>Users can post items to sell through their user profile by entering the item's title, description, photos, and location.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/kachingApp/interest.png" alt="" /></div>
 						<div class="content">
 							<h3>Add items to your interest</h3>
-							<p>As users browse the item page, they can add the items to their interest page..</p>
+							<p>As users browse the item page, they can add the items to their interest page.</p>
 						</div>
 					</section>
 					<section class="special">
