--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Ka-Ching</a></h1>
+					<h1><a href="#">Ka-Ching!</a></h1>
 					<p>Just a simple app<br />
 					to sell your things!</p>
 					<ul class="actions">
