change view page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
 	<head>
 		<title>KACHING</title>
@@ -46,24 +47,24 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight" style="overflow=hidden">
-						<div class="image" ><img src="images/kachingApp/itemsindex.png" alt="" /></div>
+						<div><img src="images/kachingApp/itemsindex.png" alt="" padding="10" /></div>
 						<div class="content">
-							<h3>Find items near you</h3>
-							<p>KaChing uses geolocation in order to populate items for users to browse that are nearby.</p>
+							<h3>&nbsp;&nbsp;&nbsp;Find items near you</h3>
+							<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;KaChing uses geolocation in order to populate items for &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;users to browse that are nearby.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/kachingApp/submit.png" alt="" /></div>
+						<div><img src="images/kachingApp/submit.png" alt="" /></div>
 						<div class="content">
-							<h3>Post items to sell</h3>
-							<p>Users can post items to sell through their user profile by entering the item's title, description, photos, and location.</p>
+							<h3>Post items to sell&nbsp;&nbsp;&nbsp;</h3>
+							<p>Users can post items to sell through their user profile by&nbsp;&nbsp;&nbsp;&nbsp; entering the item's title, description, photos, and location.&nbsp;&nbsp;&nbsp;&nbsp;</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/kachingApp/interest.png" alt="" /></div>
+						<div><img src="images/kachingApp/interest.png" alt="" /></div>
 						<div class="content">
-							<h3>Add items to your interest</h3>
-							<p>As users browse the item page, they can add the items to their interest page.</p>
+							<h3>&nbsp;&nbsp;&nbsp;Add items to your interest</h3>
+							<p>&nbsp;&nbsp;&nbsp;&nbsp;As users browse the item page, they can add the items to &nbsp;&nbsp;&nbsp;&nbsp;their interest page.</p>
 						</div>
 					</section>
 					<section class="special">
