add emulator to index.js

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
 							<p>&nbsp;&nbsp;&nbsp;&nbsp;As users browse the item page, they can add the items to &nbsp;&nbsp;&nbsp;&nbsp;their interest page.</p>
 						</div>
 					</section>
+					<section class="spotlight">
+						<div>
+							<iframe class="emulator" src="https://appetize.io/embed/chdpd2h8ehzbk5wgpg57vmtcu8?device=iphone5s&scale=75&orientation=portrait&osVersion=9.3"></iframe>
+						</div>
+						<div class="content emulator-div">
+							<h3>Try it out!&nbsp;&nbsp;&nbsp;</h3>
+							<p>
+								Click Tap to Play&nbsp;&nbsp;&nbsp;
+								<br/>
+								Click Demo Login to get started!&nbsp;&nbsp;&nbsp;
+							</p>
+						</div>
+					</section>
 					<section class="special">
 						<ul class="icons labeled">
 							<li><span class="icon fa-camera-retro"><span class="label">Explore</span></span></li>
